# projeto3-fse

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/dht11/: dht11.c  sensor_read.c
main/dht11/include/: sensor_read.h
main/energy-mode/: energy_mode.c
main/energy-mode/include/: energy_mode.h
main/gpio/: led.c  led.h
main/gpio/include/: led.h
main/ky-003/: ky-003.c
main/ky-003/include/: ky-003.h
main/ky-036/: ky-036.c
main/ky-036/include/: ky-036.h
main/light-sleep/: light-sleep.c
main/light-sleep/include/: light-sleep.h
main/mqtt/: mqtt.c  mqtt.h
main/parser/: parser.c
main/parser/include/: parser.h
main/wifi/: wifi.c
main/wifi/include/: wifi.h
